--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       rel="stylesheet"
     />
 
-    <title>Asim Law Associates</title>
+    <title>Asim Deo And Associates</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
